smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/shape-name-syntax.smithy
// Syntax error at line 4, column 14: Expected LBRACE('{') but found DOT('.') | Model
namespace com.foo

structure Not...Valid {}
